fix: shadow color, slider shows unwanted scrollbar

--- a/wp-content/themes/apacportal/ltIE9.css
+++ b/wp-content/themes/apacportal/ltIE9.css
@@ -17,7 +17,7 @@
 .box{
 	background-color: #FFF;
 	zoom: 1;
-	filter: progid:DXImageTransform.Microsoft.Shadow(color='#CCC', Direction=135, Strength=3);
+	filter: progid:DXImageTransform.Microsoft.Shadow(color='979797', Direction=135, Strength=3);
 }
 
 .box>.content, .box>header {
